# rust-booking

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/: init-db.sql
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/api-gateway/src/handlers/: mod.rs
services/api-gateway/src/middleware/: mod.rs
services/api-gateway/src/models/: mod.rs
services/appointment-service/: Cargo.toml
services/appointment-service/migrations/: 001_create_appointments.sql
services/appointment-service/src/: main.rs
services/appointment-service/src/dto/: mod.rs
services/appointment-service/src/handlers/: mod.rs
services/appointment-service/src/models/: mod.rs
services/appointment-service/src/repository/: mod.rs
services/appointment-service/src/service/: mod.rs
services/auth-service/: Cargo.toml
services/auth-service/migrations/: 001_create_users.sql
services/auth-service/src/: main.rs
services/auth-service/src/dto/: mod.rs
services/auth-service/src/handlers/: mod.rs
services/auth-service/src/models/: mod.rs
services/auth-service/src/repository/: mod.rs
services/auth-service/src/service/: mod.rs
services/notification-service/: Cargo.toml
services/notification-service/src/: main.rs
services/notification-service/src/dto/: mod.rs
services/notification-service/src/events/: mod.rs
services/notification-service/src/handlers/: mod.rs
services/notification-service/src/models/: mod.rs
services/notification-service/src/repository/: mod.rs
services/notification-service/src/service/: mod.rs
services/user-service/: Cargo.toml
services/user-service/migrations/: 001_create_profiles.sql  002_add_role_to_profiles.sql
services/user-service/src/: main.rs
services/user-service/src/dto/: mod.rs
services/user-service/src/handlers/: mod.rs
services/user-service/src/models/: mod.rs
services/user-service/src/repository/: mod.rs
services/user-service/src/service/: mod.rs
shared/: Cargo.toml
shared/src/: auth.rs  config.rs  errors.rs  models.rs
